Update Company Details

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               <span>2024 — Present</span>
 
               <p class="timeline-text">
-                <!-- CGPA: 9.18 -->
+                CGPA: 9.83
               </p>
 
             </li>
@@ -338,7 +338,20 @@
           </div>
 
           <ol class="timeline-list">
+            <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">
+                Associate Technical Consultant</h4>
+              <h3 style="color: white; font-size: small;">Company:  Intech Systems Private Limited<br> 
+              Trainee</h3>
+
+              <span>May 2025 — Present</span>
+
+              <p class="timeline-text" style="text-align: justify;">
+                Currently working on technologies such as Power BI, Microsoft Fabric and Agentic AI.
+              </p>
+
+            </li>
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">
