Update Company Details 2

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         </section>
 
         <header>
-          <h2 id="experience" class="h2 article-title">Experience</h2>
+          <h2 id="experience" class="h2 article-title">Work Experience</h2>
         </header>
         <section class="timeline">
 
@@ -334,7 +334,7 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Internships</h3>
+            <h3 class="h3">Experience</h3>
           </div>
 
           <ol class="timeline-list">
